<resources>

    <!-- Textos de alicación -->
    <string name="app_name">MyBooker</string>

    <!-- Textos comunes -->
    <string name="email" translatable="false">Correo electrónico</string>
    <string name="already_account">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="login">Inicia sesión</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Repita contraseña</string>
    <string name="dont_have_account">¿No tienes cuenta? Regístrate</string>
    <string name="register" translatable="false">Aceptar</string>
    <string name="register_now_user">Registrarse como usuario</string>
    <string name="register_now_ent">Registrarse como empresa</string>
    <string name="name">Nombre</string>
    <string name="location">Dirección</string>
    <string name="codePostal">CP</string>

    <!--- Lista de categorias -->

    <string name="sport"> Deportes </string>
    <string name="restaurant">Restaurantes</string>
    <string name="leisure">Ocio</string>
    <string name="beauty">Belleza</string>
    <string name="advisor">Asesoría</string>
    <string name="health">Salud</string>
    <!-- Array de categorias -->

    <string-array name="categorias">
        <item>@string/sport</item>
        <item>@string/restaurant</item>
        <item>@string/leisure</item>
        <item>@string/beauty</item>
        <item>@string/advisor</item>
        <item>@string/health</item>
    </string-array>

    <!-- Textos para empresas -->
    <string name="ent_address">Dirección</string>
    <string name="ent_imgage">Imagen de empresa</string>
    <string name="ent_category">Categoría</string>

    <!-- Textos para usuarios -->
    <string name="user_nickname">Alias</string>
    <string name="user_image">Imagen</string>
    <string name="label_empresas">Empresas</string>
    <string name="title_activity_empresa_main">MainActivity</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_email">Correo electrónico</string>
    <string name="logout">Logout</string>
    <!--Textos menu-->
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Agenda</string>
    <string name="tittle_profile">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_enterprise_home">Horario</string>
    <string name="title_enterprise_dashboard">Reservas</string>
    <string name="tittle_enterprise_profile">Perfil</string>
    <string name="title_enterprise_notifications">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="agenda">Agenda</string>
    <string name="hora">Hora</string>
    <string name="no_data">No tiene citas pendientes</string>
    <string name="title_enterprise_home_addShift">Crear Horario</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="title_enterprise_calendar">Todas mis Reservas</string>
    <string name="menu_dashboard">Mis Reservas</string>
    <string name="menu_home">Mi Horario</string>
    <string name="menu_notifications">Mi Perfil</string>
    <string name="all">Todas</string>
    <string name="search">Buscar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="titleReserva">Confirmar reserva</string>
</resources>