<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.ucm.fdi.mybooker.ui.home.HomeFragment"
        android:label="@string/title_enterprise_home"
        tools:layout="@layout/fragment_enterprise_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="es.ucm.fdi.mybooker.ui.dashboard.DashboardFragment"
        android:label="@string/title_enterprise_dashboard"
        tools:layout="@layout/fragment_enterprise_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="es.ucm.fdi.mybooker.ui.notifications.NotificationsFragment"
        android:label="@string/title_enterprise_notifications"
        tools:layout="@layout/fragment_enterprise_notifications" />
</navigation>