<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ActivityRegister">

    <LinearLayout
        style="@style/df_row_vertical"
        android:layout_height="match_parent"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="6"
            android:background="@color/app_color"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                style="@style/df_h3"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/label_empresas"
                style="@style/df_h3"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:text="@string/label_empresas"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/formBg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp"
            tools:ignore="Suspicious0dp">

            <LinearLayout
                android:id="@+id/sendOtpLayout"
                style="@style/df_row_vertical"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="visible">

                <EditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/editTextUserMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btnRegisterUser"
                    style="@style/btn_access"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="40dp"
                    android:text="@string/register" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>