<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context="es.ucm.fdi.mybooker.ActivityLogin">

        <LinearLayout
            style="@style/df_row_vertical"
            android:layout_height="match_parent"
            android:weightSum="12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="6"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="Suspicious0dp">

                <TextView
                    style="@style/df_h3"
                    android:layout_width="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:background="@color/formBg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp"
                tools:ignore="Suspicious0dp">

                <LinearLayout
                    android:id="@+id/sendOtpLayout"
                    style="@style/df_row_vertical"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/editTextUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/btnLogIn"
                        style="@style/btn_access"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="40dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/login" />

                    <TextView
                        android:id="@+id/btnRegisterUser"
                        style="@style/df_h6"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/register_now_user"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/btnRegisterEnt"
                        style="@style/df_h6"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/register_now_ent"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>